--- a/app/home/templates/layouts/main.html
+++ b/app/home/templates/layouts/main.html
@@ -1,68 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
-    <title>EShopper - Bootstrap Shop Template</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+	<meta charset="utf-8">
+	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="">
+	<meta name="author"      content="Sergey Pozhilov (GetTemplate.com)">
+	
+	<title>Progressus - Free business bootstrap template by GetTemplate</title>
 
-    <!-- Favicon -->
-    <link href="../static/img/favicon.ico" rel="icon">
+	<link rel="shortcut icon" href="../static/images/gt_favicon.png">
+	
+	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
+	<link rel="stylesheet" href="../static/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../static/css/font-awesome.min.css">
 
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
+	<!-- Custom styles for our template -->
+	<link rel="stylesheet" href="../static/css/bootstrap-theme.css" media="screen" >
+	<link rel="stylesheet" href="../static/css/main.css">
 
-    <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-
-    <!-- Libraries Stylesheet -->
-    <link href="../static/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="../static/css/style.css" rel="stylesheet">
-    {% block stylesheets %}{% endblock stylesheets %}
+	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!--[if lt IE 9]>
+	<script src="assets/js/html5shiv.js"></script>
+	<script src="assets/js/respond.min.js"></script>
+	<![endif]-->
 </head>
 
-<body>
+<body class="home">
     <!-- Topbar Start -->
-    
-        {% include "partials/_topbarhome.html" %}
-    
-    <div class="container-fluid mb-5">
-        <div class="row border-top px-xl-5">
-
-            {% include "partials/_sidebarhome.html" %}
-            <div class="col-lg-9">
-
-
                 {% include "partials/_navbarhome.html" %}
                 {% block content %}
                 {% endblock content %}
-            </div>
-        </div>
-    </div>
-    {% include "partials/_footerhome.html" %}
+            
+                {% include "partials/_footerhome.html" %}
 
 
 
     <!-- Specific JS goes HERE -->
     {% block javascripts %}{% endblock javascripts %}
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="../static/lib/easing/easing.min.js"></script>
-    <script src="../static/lib/owlcarousel/owl.carousel.min.js"></script>
-
-    <!-- Contact Javascript File -->
-    <script src="../static/mail/jqBootstrapValidation.min.js"></script>
-    <script src="../static/mail/contact.js"></script>
-
-    <!-- Template Javascript -->
-    <script src="../static/js/main.js"></script>
+ <!-- JavaScript libs are placed at the end of the document so the pages load faster -->
+ <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+ <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+ <script src="../static/js/headroom.min.js"></script>
+ <script src="../static/js/jQuery.headroom.min.js"></script>
+ <script src="../static/js/template.js"></script>
 </body>
-
 </html>
