--- a/app/admin/templates/partials/_navbar.html
+++ b/app/admin/templates/partials/_navbar.html
@@ -77,7 +77,7 @@
             <i class="ti-settings text-primary"></i>
             Settings
           </a>
-          <a href="{{url_for('admin_blueprint.admin_login')}}" class="dropdown-item">
+          <a href="{{url_for('home_blueprint.signin_page')}}" class="dropdown-item">
             <i class="ti-power-off text-primary"></i>
             Logout
           </a>
