--- a/app/home/templates/layouts/signin.html
+++ b/app/home/templates/layouts/signin.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author"      content="Sergey Pozhilov (GetTemplate.com)">
 	
-	<title>Student Management System</title>
+	<title>Admin login</title>
 
 	<link rel="shortcut icon" href="../static/images/gt_favicon.png">
 	
@@ -27,7 +27,7 @@
 
 <body class="home">
     <!-- Topbar Start -->
-                {% include "partials/_navbarhome.html" %}
+                
                 {% block content %}
                 {% endblock content %}
             
