--- a/app/home/static/css/bootstrap-theme.css
+++ b/app/home/static/css/bootstrap-theme.css
@@ -66,7 +66,7 @@
 .navbar-nav .dropdown-menu {
 	left: -5px;
 	font-size: 13px;
-	background-color: rgba(0, 0, 0, .7);
+	background-color: rgb(29 95 133 / 70%);
 	border: 0px none;
 	-webkit-border-radius: 0px;
 	-moz-border-radius: 0px;
