--- a/app/home/templates/layouts/main.html
+++ b/app/home/templates/layouts/main.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author"      content="Sergey Pozhilov (GetTemplate.com)">
 	
-	<title>Progressus - Free business bootstrap template by GetTemplate</title>
+	<title> Ugyen Academy </title>
 
 	<link rel="shortcut icon" href="../static/images/gt_favicon.png">
 	
