--- a/app/home/templates/signin.html
+++ b/app/home/templates/signin.html
@@ -11,8 +11,8 @@
 <div class="container">
 
 	<ol class="breadcrumb">
-		<li><a href="{{url_for('home_blueprint.route_default')}}">Home</a></li>
-		<li class="active">Admin Login</li>
+		<li><a href="{{url_for('home_blueprint.route_default')}}"><i class="fa fa-home"> Home</i></a></li>
+		<li class="active">Student Registration</li>
 	</ol>
 
 	<div class="row">
