--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -11,9 +11,9 @@
 	<header id="head">
 		<div class="container">
 			<div class="row">
-				<h1 class="lead">AWESOME, CUSTOMIZABLE, FREE</h1>
-				<p class="tagline">PROGRESSUS: free business bootstrap template by <a href="http://www.gettemplate.com/?utm_source=progressus&amp;utm_medium=template&amp;utm_campaign=progressus">GetTemplate</a></p>
-				<p> <a class="btn btn-action btn-lg" role="button">Enroll NOW</a></p>
+				<h1 class="lead">School Of WILL:</h1>
+				<p class="tagline">Winners, Innovators, Leaders & Learners</p>
+				<p> <a href="{{url_for('home_blueprint.enroll_page')}}" class="btn btn-action btn-lg" role="button">ENROLL NOW</a></p>
 			</div>
 		</div>
 	</header>
@@ -22,10 +22,9 @@
 	<!-- Intro -->
 	<div class="container text-center">
 		<br> <br>
-		<h2 class="thin">The best place to tell people why they are here</h2>
+		<h2 class="thin">VISION & MISSION</h2>
 		<p class="text-muted">
-			The difference between involvement and commitment is like an eggs-and-ham breakfast:<br> 
-			the chicken was involved; the pig was committed.
+			TIn the present milieu with erosion of values and lowering of standards in most institutions, UA stands out as a school with strong value system and a code of conduct and discipline, which is based on mutual respect.  We uphold our founder’s vision and stress on total development – head, hand and heart.  We are deeply committed in instilling in our students, positive traits like self discipline and social harmony that will lead to Gross National Happiness and Global Peace. Our school motto, “Be Your Best” makes every individual be his or her own competitor. In the end we aspire for developing a good human being. 
 		</p>
 	</div>
 	<!-- /Intro-->
@@ -34,31 +33,49 @@
 	<div class="jumbotron top-space">
 		<div class="container">
 			
-			<h3 class="text-center thin">Reasons to use this template</h3>
+			<h3 class="text-center thin">TOP MANAGEMENT</h3>
 			
 			<div class="row">
 				<div class="col-md-3 col-sm-6 highlight">
-					<div class="h-caption"><h4><i class="fa fa-cogs fa-5"></i>Bootstrap-powered</h4></div>
+					<div class="h-caption">
+						<img src="../static/images/principal.png" alt="image" style="max-width: 150px; max-height: 150px; border-radius: 5%;">
+						<h4>Mr. Norbu Gyaltshen</h4>
+						<p>Principal</p>
+					</div>
 					<div class="h-body text-center">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aliquid adipisci aspernatur. Soluta quisquam dignissimos earum quasi voluptate. Amet, dignissimos, tenetur vitae dolor quam iusto assumenda hic reprehenderit?</p>
+						<p><i class="fa fa-envelope"> uakp@druknet.bt</i></p>
+						<p><i class="fa fa-phone"> 77111000</i></p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 highlight">
-					<div class="h-caption"><h4><i class="fa fa-flash fa-5"></i>Fat-free</h4></div>
+					<div class="h-caption">
+						<img src="../static/images/vp1.png" alt="image" style="max-width: 150px; max-height: 150px; border-radius: 5%;">
+						<h4>Lopen Kezang Thinley</h4>
+						<p>Vice Principal</p>
+					</div>
 					<div class="h-body text-center">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, commodi, sequi quis ad fugit omnis cumque a libero error nesciunt molestiae repellat quos perferendis numquam quibusdam rerum repellendus laboriosam reprehenderit! </p>
+						<p><i class="fa fa-envelope"> uakp@druknet.bt</i></p>
+						<p><i class="fa fa-phone"> 17644493</i></p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 highlight">
-					<div class="h-caption"><h4><i class="fa fa-heart fa-5"></i>Creative Commons</h4></div>
+					<div class="h-caption">
+						<img src="../static/images/vp2.png" alt="image" style="max-width: 150px; max-height: 150px; border-radius: 5%;">
+						<h4>Mr. D.R Kharga</h4>
+						<p>Vice Principal</p></div>
 					<div class="h-body text-center">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, vitae, perferendis, perspiciatis nobis voluptate quod illum soluta minima ipsam ratione quia numquam eveniet eum reprehenderit dolorem dicta nesciunt corporis?</p>
+						<p><i class="fa fa-envelope"> dilliram_kharga@yahoo.com</i></p>
+						<p><i class="fa fa-phone"> 17430315</i></p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 highlight">
-					<div class="h-caption"><h4><i class="fa fa-smile-o fa-5"></i>Author's support</h4></div>
+					<div class="h-caption">
+						<img src="../static/images/dean.png" alt="image" style="max-width: 150px; max-height: 150px; border-radius: 10%;">
+						<h4>Dr. Kenneth K. Kim</h4>
+						<p>Dean of International Affairs</p></div></div>
 					<div class="h-body text-center">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, excepturi, maiores, dolorem quasi reprehenderit illo accusamus nulla minima repudiandae quas ducimus reiciendis odio sequi atque temporibus facere corporis eos expedita? </p>
+						<p><i class="fa fa-envelope"> dilliram_kharga@yahoo.com</i></p>
+						<p><i class="fa fa-phone"> 17430315</i></p>
 					</div>
 				</div>
 			</div> <!-- /row  -->
