--- a/app/home/templates/partials/_footerhome.html
+++ b/app/home/templates/partials/_footerhome.html
@@ -7,10 +7,10 @@
                 <div class="col-md-3 widget">
                     <h3 class="widget-title">Contact</h3>
                     <div class="widget-body">
-                        <p>+234 23 9873237<br>
-                            <a href="mailto:#">some.email@somewhere.com</a><br>
+                        <p>Tel. +975 2 584710<br>
+                            <a href="mailto:#">E-mail. pk.ugyenacademy@education.gov.bt </a><br>
                             <br>
-                            234 Hidden Pond Road, Ashland City, TN 37015
+                            Fax. +975 2 584710
                         </p>	
                     </div>
                 </div>
@@ -57,9 +57,9 @@
 
                 <div class="col-md-6 widget">
                     <div class="widget-body">
-                        <p class="text-right">
-                            Copyright &copy; 2014, Your name. Designed by <a href="http://gettemplate.com/" rel="designer">gettemplate</a> 
-                        </p>
+                         <a href="https://www.ugyenacademy.edu.bt/w" rel="designer"><p class="text-right">
+                            Copyright &copy; Ugyen Academy, Khuruthang, Punakha, Bhutan 2022</p></a> 
+                        
                     </div>
                 </div>
 
