--- a/app/home/templates/layouts/enroll_main.html
+++ b/app/home/templates/layouts/enroll_main.html
@@ -29,7 +29,7 @@
 	<![endif]-->
 </head>
 
-<body class="home">
+<body >
     <!-- Topbar Start -->
                 
                 {% block content %}
