--- a/app/home/static/css/enroll.css
+++ b/app/home/static/css/enroll.css
@@ -39,8 +39,7 @@
   @media screen and (min-width: 768px) {
 	/* Remove the padding we set earlier */
 	.header,
-	.marketing,
-	.footer {
+	.marketing {
 	  padding-right: 0;
 	  padding-left: 0;
 	}
