--- a/app/home/templates/partials/_footerhome.html
+++ b/app/home/templates/partials/_footerhome.html
@@ -1,38 +1,47 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <footer id="footer" class="top-space">
 
     <div class="footer1">
         <div class="container">
             <div class="row">
                 
-                <div class="col-md-3 widget">
-                    <h3 class="widget-title">Contact</h3>
+                <div class="col-md-4 widget">
+                    <h3 class="widget-title">CONTACT US :</h3>
                     <div class="widget-body">
+                    <h5><b>Principal:</b></h5>
+                     <p>Telephone No.: +975 05 584710 </p>
+                     <p>Fax No.: +975 05 584711 </p>
+                     <h5><b>Vice Principal (Lower Division) :</b></h5>
+                     <p>Telephone No.: +975 05 584713</p>
+
                         <p>Tel. +975 2 584710<br>
-                            <a href="mailto:#">E-mail. pk.ugyenacademy@education.gov.bt </a><br>
+                            Fax. +975 2 584710 <br> <br><br>
+                            <p>E-mail:<a href="mailto:pk.ugyenacademy@education.gov.bt"> pk.ugyenacademy@education.gov.bt </a></p><br>
                             <br>
-                            Fax. +975 2 584710
+                            
                         </p>	
                     </div>
                 </div>
 
                 <div class="col-md-3 widget">
-                    <h3 class="widget-title">Follow me</h3>
+                    <h3 class="widget-title" >QUICK LINKS</h3>
                     <div class="widget-body">
                         <p class="follow-me-icons">
-                            <a href=""><i class="fa fa-twitter fa-2"></i></a>
-                            <a href=""><i class="fa fa-dribbble fa-2"></i></a>
-                            <a href=""><i class="fa fa-github fa-2"></i></a>
-                            <a href=""><i class="fa fa-facebook fa-2"></i></a>
+                            <a href="https://www.facebook.com/groups/42276304044" class="fa fa-facebook"></a>
+                            <a href="https://www.ugyenacademy.edu.bt/" class="fa fa-google"></a>
+                            <a href="#" class="fa fa-youtube"></a>
+                            <a href="https://www.instagram.com/explore/locations/289197644/ugyen-academy-punakha/" class="fa fa-instagram"></a>
+
                         </p>	
                     </div>
                 </div>
 
-                <div class="col-md-6 widget">
-                    <h3 class="widget-title">Text widget</h3>
+                <div class="col-md-5 widget">
+                    <h3 class="widget-title">GOOGLE LOCATION</h3>
                     <div class="widget-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, dolores, quibusdam architecto voluptatem amet fugiat nesciunt placeat provident cumque accusamus itaque voluptate modi quidem dolore optio velit hic iusto vero praesentium repellat commodi ad id expedita cupiditate repellendus possimus unde?</p>
-                        <p>Eius consequatur nihil quibusdam! Laborum, rerum, quis, inventore ipsa autem repellat provident assumenda labore soluta minima alias temporibus facere distinctio quas adipisci nam sunt explicabo officia tenetur at ea quos doloribus dolorum voluptate reprehenderit architecto sint libero illo et hic.</p>
-                    </div>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3537.300895949615!2d89.86898611429746!3d27.553170638859022!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e1dd60fb314a25%3A0x11e7d76c7e8aa904!2zVWd5ZW4gQWNhZGVteSBIaWdoZXIgU2Vjb25kYXJ5IFNjaG9vbCDgvajgvbzgvIvgvaLgvpLgvrHgvZPgvIvgvaLgvbLgvYLgvIvgvZTgvaDgvbLgvIvgvZbgvrHgvbTgvYTgvIvgvYLgvZPgvabgvI0!5e0!3m2!1sen!2sbt!4v1651040203513!5m2!1sen!2sbt" width="460" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                       </div>
                 </div>
 
             </div> <!-- /row of widgets -->
@@ -42,22 +51,9 @@
     <div class="footer2">
         <div class="container">
             <div class="row">
-                
-                <div class="col-md-6 widget">
+                <div class="col-md-12 widget">
                     <div class="widget-body">
-                        <p class="simplenav">
-                            <a href="#">Home</a> | 
-                            <a href="about.html">About</a> |
-                            <a href="sidebar-right.html">Sidebar</a> |
-                            <a href="contact.html">Contact</a> |
-                            <b><a href="signup.html">Sign up</a></b>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col-md-6 widget">
-                    <div class="widget-body">
-                         <a href="https://www.ugyenacademy.edu.bt/w" rel="designer"><p class="text-right">
+                         <a href="https://www.ugyenacademy.edu.bt/w" rel="designer"><p class="text-center">
                             Copyright &copy; Ugyen Academy, Khuruthang, Punakha, Bhutan 2022</p></a> 
                         
                     </div>
