--- a/app/home/static/css/main.css
+++ b/app/home/static/css/main.css
@@ -238,9 +238,6 @@ img.pull-left {
 	color: rgb(0, 0, 0);
 }
 
-.footer1 a {
-	color: #ccc;
-}
 
 .footer1 a:hover {
 	color: #fff;
@@ -253,7 +250,6 @@ img.pull-left {
 .footer1 .widget-title {
 	font-size: 17px;
 	font-weight: bold;
-	color: #ccc;
 	margin: 0 0 20px;
 }
 
@@ -313,5 +309,43 @@ img.pull-left {
 	margin: 0 5px;
 }
 
+/* social media */
 
+.follow-me-icons .fa {
+	padding: 15px;
+	font-size: 15px;
+	width: 40px;
+	text-align: center;
+	text-decoration: none;
+	margin: 5px 2px;
+	border-radius: 50%;
+  }
+  
+  .follow-me-icons .fa:hover {
+	  opacity: 0.7;
+  }
+  
+  .follow-me-icons .fa-facebook {
+	background: #3B5998;
+	color: white;
+  }
+  
+  
+  
+  .follow-me-icons .fa-google {
+	background: #dd4b39;
+	color: white;
+  }
+  
+  
+  .follow-me-icons .fa-youtube {
+	background: #bb0000;
+	color: white;
+  }
+  
+  .follow-me-icons .fa-instagram {
+	background: #125688;
+	color: white;
+  }
+  
 
