--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -11,7 +11,6 @@
 	<header id="head">
 		<div class="container">
 			<div class="row">
-			
 				<h1 class="lead">School Of WILL:</h1>
 				<p class="tagline">Winners, Innovators, Leaders & Learners</p>
 				<p> <a href="{{url_for('home_blueprint.enroll_page')}}" class="btn btn-action btn-lg" role="button">ENROLL NOW</a></p>
@@ -120,30 +119,42 @@
 		</div> <!-- /row -->
 
 		<div class="jumbotron top-space">
-			<h4>Dicta, nostrum nemo soluta sapiente sit dolor quae voluptas quidem doloribus recusandae facere magni ullam suscipit sunt atque rerum eaque iusto facilis esse nam veniam incidunt officia perspiciatis at voluptatibus. Libero, aliquid illum possimus numquam fuga.</h4>
-     		<p class="text-right"><a class="btn btn-primary btn-large">Learn more »</a></p>
+			<h4><b>PRINCIPAL'S MESSAGE :</b></h4>
+			<h5>Dear Parents, Guardians, Teachers, and Students </h5>
+			<p>Re: UA’s staggered re-opening dates for 2022 Academic Session</p>	
+			 <p>On behalf of the UA Family, I extend our heartfelt gratitude for providing your relentless support through this most unprecedented and challenging times. For us teachers, <br> we are as puzzled as everyone is because, before we know an academic year has come to an end, the next is beginning. Likewise, MoE has been changing the re-opening dates for schools in the country because of the uncertainties and more importantly the vaccine roll out for children aged 5 to 11 – mass vaccination of all the students. 
+			  <div class="collapse" id="collapseExample">
+				<div class="card card-body">
+					The most recent change has been notified <b>vide Notification No: DSE/SPCD/ADM (1.1-A)/2022/274 dated 26th March 2022.</b>
+					Accordingly, UA wishes to share the following attachments : <br>
+					<ul>
+						<li>Re-opening dates for Academic Session 2022</li>
+						<li>Essential School Requirements</li>
+						<li>Other Educational Programme(s)</li>
+					  </ul>
+	
+						Please bear with us for the slight delay in the re-opening dates for classes VII to X (Lower Division); we had no choice but to plan it that way so that all our students below 11 years are also fully vaccinated – mainly in class VII. Of course, we will be conducting Zoom Meetings to provide an opportunity for students/parents/guardians to share and reflect on UA’s culture and climate and beyond. 
+						<br><br>
+						Additionally, it will be unbecoming on my part as a school leader not to commend our class X and XII teachers who have had hardly any break in both 2020 and 2021 academic sessions. As seasoned professionals, our teachers have sportingly endured the mental stress and physical hardships associated with coming into “self-containment mode” of operation for close to two months. <br><br>
+						Even, amid the extraordinary challenges of the past two years, UA teachers have been innovative, flexible, and brave. But in many cases, they've also been pushed to their limits — leading to fears of them wanting to quit the profession. Undoubtedly, coping with uncertainty is always the greatest challenge. Yet, they chose to cling on because they love the “teaching profession”.
+						<br><br>
+						Again, with the highest number of (appearing the BCSE - Class X and BHSEC - Class XII) students in “self-containment mode” of operation in the country, UA Family members had the adaptability to move forward successfully, especially in times of great change or transformation. Yes, we have been all positive, proactive in adapting, adopting managing the complex and stress-filled situations.
+						My hats off to our supportive parents/guardians, resilient teachers, and disciplined students for the commendable finish to academic session 2021. At the same time we all look forward to a happier and safe 2022 academic session.
+						<br><br>
+						Warmest regards to all
+						<br><br>
+				</div>
+			  </div>
+			  <a class="btn btn-primary btn-action " data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+				Read more »
+			  </a>
   		</div>
 
-</div>	<!-- /container -->
-	
-	<!-- Social links. @TODO: replace by link/instructions in template -->
-	<section id="social">
-		<div class="container">
-			<div class="wrapper clearfix">
-				<!-- AddThis Button BEGIN -->
-				<div class="addthis_toolbox addthis_default_style">
-				<a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-				<a class="addthis_button_tweet"></a>
-				<a class="addthis_button_linkedin_counter"></a>
-				<a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
-				</div>
-				<!-- AddThis Button END -->
-			</div>
-		</div>
-	</section>
-	<!-- /social links -->
-	{% endblock content %}
+</div>	
 
+
+
+{% endblock content %}
 <!-- Specific JS goes HERE --> 
 {% block javascripts %}
 {% endblock javascripts %}
