--- a/app/home/templates/layouts/enroll_main.html
+++ b/app/home/templates/layouts/enroll_main.html
@@ -42,6 +42,8 @@
     <!-- Specific JS goes HERE -->
     {% block javascripts %}{% endblock javascripts %}
  <!-- JavaScript libs are placed at the end of the document so the pages load faster -->
+ <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
  <script src="../static/js/headroom.min.js"></script>
